--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.2
   provider: ^6.1.2
+  intl: ^0.19.0
+  flutter_slidable: ^3.1.0
+  fl_chart: ^0.67.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
